Remove testing for now, add as later enhancement

--- a/package.json
+++ b/package.json
@@ -20,8 +20,5 @@
     "cli.js"
   ],
   "bin": "./cli.js",
-  "license": "MIT",
-  "devDependencies": {
-    "jest": "^24.7.0"
-  }
+  "license": "MIT"
 }
